--- a/src/components/skills/skills.styles.scss
+++ b/src/components/skills/skills.styles.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #1e2529;
   .skills-container {
     width: 50vw;
     display: grid;
