--- a/src/components/about/about.styles.scss
+++ b/src/components/about/about.styles.scss
@@ -2,4 +2,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 94vh;
+  background-color: #171d20;
+  margin-top: 6vh;
+
+  h1 {
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1.6rem;
+    margin: 0.5%;
+    opacity: 0.8;
+  }
+  .hilight {
+    color: #76b041;
+    opacity: 1;
+  }
 }
