--- a/src/components/contact/contact.styles.scss
+++ b/src/components/contact/contact.styles.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #171d20;
   .contact-list {
     width: 30%;
     list-style: none;
