--- a/src/components/projects/projects.styles.scss
+++ b/src/components/projects/projects.styles.scss
@@ -2,6 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 5%;
+  background-color: #1e2529;
+  .project-image {
+    width: 200px;
+  }
   .project-list {
     grid-template-columns: 1fr 1fr 1fr;
   }
