added all sections to the main page

--- a/src/components/skills/skills.styles.scss
+++ b/src/components/skills/skills.styles.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   align-items: center;
   background-color: #1e2529;
+  height: 44vh;
+  h2 {
+    font-size: 2rem;
+  }
   .skills-container {
     width: 50vw;
     display: grid;
