--- a/src/components/project/project.styles.scss
+++ b/src/components/project/project.styles.scss
@@ -4,13 +4,37 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 350px;
+  width: 100%;
+  .title {
+    font-size: 1.5rem;
+    padding: 2%;
+  }
+  p {
+    font-size: 1.1rem;
+    margin: 4% 25px 0 25px;
+  }
+  .project-image {
+    width: 300px;
+  }
   .links {
     padding: 0;
     list-style-type: none;
     display: flex;
+    justify-content: space-around;
+    margin-bottom: 5px;
+    width: 150px;
     .github-icon {
-      width: 30px;
-      height: 30px;
+      width: 40px;
+      height: 40px;
+    }
+    a {
+      color: white;
+      font-size: 1.5rem;
+      text-decoration: none;
+      &:hover {
+        color: #76b041;
+      }
     }
   }
 }
