--- a/src/components/projects/projects.styles.scss
+++ b/src/components/projects/projects.styles.scss
@@ -2,12 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
   padding-bottom: 5%;
+  height: 44vh;
   background-color: #1e2529;
-  .project-image {
-    width: 200px;
+  h2 {
+    font-size: 2rem;
   }
+
   .project-list {
-    grid-template-columns: 1fr 1fr 1fr;
+    margin-left: -7.5%;
+    display: grid;
+    grid-gap: 15%;
+    grid-template-columns: 350px 350px;
   }
 }
