--- a/src/components/about/about.styles.scss
+++ b/src/components/about/about.styles.scss
@@ -2,20 +2,53 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 94vh;
+  height: 100vh;
   background-color: #171d20;
-  margin-top: 6vh;
-
+  margin-top: 5%;
   h1 {
     font-size: 2rem;
   }
   p {
-    font-size: 1.6rem;
-    margin: 0.5%;
+    font-size: 1.75rem;
+    width: 60%;
     opacity: 0.8;
   }
-  .hilight {
-    color: #76b041;
-    opacity: 1;
+}
+
+@media (max-width: 1100px) {
+  .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    min-height: 100vh;
+    background-color: #171d20;
+    margin-top: 5%;
+    h1 {
+      font-size: 2rem;
+    }
+    p {
+      font-size: 1.75rem;
+      width: 60%;
+      opacity: 0.8;
+    }
+  }
+}
+@media (max-width: 480px) {
+  .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    background-color: #171d20;
+    margin-top: 5%;
+    h1 {
+      font-size: 2rem;
+    }
+    p {
+      font-size: 1.2rem;
+      width: 90%;
+      opacity: 0.8;
+    }
   }
 }
