--- a/src/components/contact/contact.styles.scss
+++ b/src/components/contact/contact.styles.scss
@@ -2,12 +2,82 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #171d20;
+
+  height: 100vh;
+  background-color: #1e2529;
+  h1 {
+    font-size: 3rem;
+    margin-top: 5%;
+  }
   .contact-list {
-    width: 30%;
+    margin-top: 5%;
+    align-self: center;
+    width: 40%;
     list-style: none;
     display: flex;
     justify-content: space-around;
     padding: 0;
+  }
+  .email {
+    margin-top: 5%;
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 1100px) {
+  .contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    height: 100vh;
+    background-color: #1e2529;
+    h1 {
+      font-size: 3rem;
+      margin-top: 5%;
+    }
+    .contact-list {
+      margin-top: 5%;
+      align-self: center;
+      width: 90%;
+      list-style: none;
+      display: flex;
+      justify-content: space-around;
+      padding: 0;
+    }
+    .email {
+      margin-top: 5%;
+      font-size: 2rem;
+    }
+  }
+}
+@media (max-width: 480px) {
+  .contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    height: 100%;
+    background-color: #1e2529;
+    h1 {
+      font-size: 2rem;
+      margin-top: 5%;
+    }
+    .contact-list {
+      margin-top: 5%;
+      align-self: center;
+      width: 80%;
+      list-style: none;
+      display: flex;
+      justify-content: space-around;
+      padding: 0;
+      img {
+        width: 70px;
+      }
+    }
+    .email {
+      margin: 5% 0 5% 0;
+      font-size: 1.5rem;
+    }
   }
 }
