--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -4,7 +4,7 @@
   color: white;
   position: fixed;
   width: 100vw;
-  height: 6vh;
+  height: 60px;
   z-index: 2;
   .list-container {
     display: flex;
