--- a/src/components/project/project.styles.scss
+++ b/src/components/project/project.styles.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 350px;
+  height: 100%;
   width: 100%;
   .title {
     font-size: 1.5rem;
@@ -15,7 +15,8 @@
     margin: 4% 25px 0 25px;
   }
   .project-image {
-    width: 300px;
+    max-width: 350px;
+    width: 95%;
   }
   .links {
     padding: 0;
@@ -34,6 +35,51 @@
       text-decoration: none;
       &:hover {
         color: #76b041;
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .project {
+    background-color: #2f3133;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 95%;
+    margin: 3%;
+    .title {
+      font-size: 1.3rem;
+      padding: 2%;
+    }
+    p {
+      font-size: 1.1rem;
+      margin: 4% 25px 0 25px;
+    }
+    .project-image {
+      display: none;
+      width: 300px;
+    }
+    .links {
+      padding: 0;
+      list-style-type: none;
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 5px;
+      width: 150px;
+      .github-icon {
+        width: 40px;
+        height: 40px;
+      }
+      a {
+        color: white;
+        font-size: 1.5rem;
+        text-decoration: none;
+        &:hover {
+          color: #76b041;
+        }
       }
     }
   }
