--- a/src/components/projects/projects.styles.scss
+++ b/src/components/projects/projects.styles.scss
@@ -2,18 +2,60 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  padding-bottom: 5%;
-  height: 44vh;
+  justify-content: space-around;
+  padding-bottom: 1%;
+  min-height: 50vh;
+  height: 100%;
   background-color: #1e2529;
-  h2 {
+  h1 {
     font-size: 2rem;
   }
 
   .project-list {
-    margin-left: -7.5%;
+    width: 50%;
     display: grid;
     grid-gap: 15%;
-    grid-template-columns: 350px 350px;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 1100px) {
+  .projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    padding-bottom: 1%;
+    height: 100%;
+    background-color: #1e2529;
+    h1 {
+      font-size: 2rem;
+    }
+
+    .project-list {
+      width: 75%;
+      display: grid;
+      grid-gap: 15%;
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+}
+@media (max-width: 480px) {
+  .projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    padding-bottom: 5%;
+    height: 100%;
+    background-color: #1e2529;
+    h1 {
+      font-size: 2rem;
+    }
+
+    .project-list {
+      margin-left: 0%;
+      display: block;
+    }
   }
 }
