--- a/src/components/skills/skills.styles.scss
+++ b/src/components/skills/skills.styles.scss
@@ -2,15 +2,57 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
   background-color: #1e2529;
-  height: 44vh;
-  h2 {
+  min-height: 50vh;
+  height: 100%;
+
+  h1 {
     font-size: 2rem;
   }
   .skills-container {
-    width: 50vw;
+    width: 50%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-column-gap: 10%;
+    grid-row-gap: 0;
+  }
+}
+
+@media (max-width: 1100px) {
+  .skills {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #1e2529;
+    height: 44vh;
+
+    h1 {
+      font-size: 2rem;
+    }
+    .skills-container {
+      width: 75%;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-column-gap: 10%;
+    }
+  }
+}
+@media (max-width: 480px) {
+  .skills {
+    display: flex;
+    flex-direction: column;
+    background-color: #1e2529;
+    height: 100%;
+
+    h1 {
+      font-size: 1.5rem;
+    }
+    .skills-container {
+      display: grid;
+      width: 90%;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-column-gap: 10%;
+    }
   }
 }
