added mobile navbar

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -23,4 +23,67 @@
       }
     }
   }
+  .burger {
+    display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    top: 0;
+    background-color: #171d20;
+    color: white;
+    position: fixed;
+    width: 100vw;
+    height: 60px;
+
+    z-index: 2;
+    .burger-line {
+      width: 35px;
+      height: 5px;
+      background-color: white;
+      margin: 3px 0;
+    }
+    .list-container {
+      display: none;
+      list-style: none;
+      justify-content: center;
+      align-items: center;
+      background-color: #171d20;
+      margin: 0;
+      width: 100vw;
+
+      padding: 0.5%;
+      li {
+        display: flex;
+        justify-content: center;
+        width: 100vw;
+        background-color: #171d20;
+        padding: 0.5%;
+        font-size: 1.4em;
+        border-bottom: 2px solid #171d20;
+
+        &:hover {
+          border-bottom: 2px solid white;
+          background-color: white;
+          color: #171d20;
+        }
+      }
+    }
+    .burger {
+      width: 35px;
+      display: flex;
+      flex-direction: column;
+      margin: 15px 15px;
+    }
+    .dflex {
+      display: flex;
+      flex-direction: column;
+    }
+    .dnone {
+      display: none;
+    }
+  }
 }
