--- a/src/components/projects/projects.styles.scss
+++ b/src/components/projects/projects.styles.scss
@@ -6,6 +6,7 @@
   padding-bottom: 1%;
   min-height: 50vh;
   height: 100%;
+  padding-top: 30px;
   background-color: #1e2529;
   h1 {
     font-size: 2rem;
@@ -27,6 +28,7 @@
 
     padding-bottom: 1%;
     height: 100%;
+
     background-color: #1e2529;
     h1 {
       font-size: 2rem;
