--- a/src/pages/home-page/home-page.styles.scss
+++ b/src/pages/home-page/home-page.styles.scss
@@ -1,13 +1,18 @@
 .home-page {
   background-color: #1e2529;
   color: white;
+  display: flex;
+  flex-direction: column;
+
   hr {
     border-top: 1px solid #76b041;
     border-bottom: 1px solid #1e2529;
+    margin: 0 auto;
 
     width: 60%;
   }
 }
+
 @media (max-width: 480px) {
   .home-page {
     background-color: #1e2529;
@@ -17,6 +22,6 @@
     border-top: 1px solid #76b041;
     border-bottom: 1px solid #1e2529;
 
-    width: 60%;
+    width: 90%;
   }
 }
