--- a/src/components/about/about.styles.scss
+++ b/src/components/about/about.styles.scss
@@ -2,10 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  min-height: calc(100vh - 60px);
+  height: 100%;
   background-color: #171d20;
   margin-top: 5%;
   h1 {
+    padding-top: 60px;
     font-size: 2rem;
   }
   p {
@@ -20,11 +22,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
-    min-height: 100vh;
+
     background-color: #171d20;
-    margin-top: 5%;
+
     h1 {
+      margin-top: 5%;
       font-size: 2rem;
     }
     p {
