--- a/src/components/contact/contact.styles.scss
+++ b/src/components/contact/contact.styles.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  height: 100vh;
+  height: 100%;
+  min-height: calc(100vh - 60px);
   background-color: #1e2529;
   h1 {
     font-size: 3rem;
@@ -30,7 +30,7 @@
     flex-direction: column;
     align-items: center;
 
-    height: 100vh;
+    height: calc(100vh - 60px);
     background-color: #1e2529;
     h1 {
       font-size: 3rem;
@@ -56,8 +56,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: calc(100vh - 60px);
 
-    height: 100%;
     background-color: #1e2529;
     h1 {
       font-size: 2rem;
