--- a/src/components/skills/skills.styles.scss
+++ b/src/components/skills/skills.styles.scss
@@ -6,6 +6,7 @@
   background-color: #1e2529;
   min-height: 50vh;
   height: 100%;
+  padding: 35px 0;
 
   h1 {
     font-size: 2rem;
@@ -25,7 +26,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #1e2529;
-    height: 44vh;
+    min-height: 44vh;
 
     h1 {
       font-size: 2rem;
@@ -46,7 +47,7 @@
     height: 100%;
 
     h1 {
-      font-size: 1.5rem;
+      font-size: 2rem;
     }
     .skills-container {
       display: grid;
