--- a/src/components/about/about.styles.scss
+++ b/src/components/about/about.styles.scss
@@ -31,7 +31,27 @@
     }
     p {
       font-size: 2rem;
-      width: 60%;
+      width: 80%;
+      opacity: 0.8;
+    }
+  }
+}
+@media (orientation: landscape) and (max-width: 900px) {
+  .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: calc(100vh - 60px);
+    height: 100%;
+    background-color: #171d20;
+    margin-top: 5%;
+    h1 {
+      padding-top: 60px;
+      font-size: 3rem;
+    }
+    p {
+      font-size: 2rem;
+      width: 80%;
       opacity: 0.8;
     }
   }
