--- a/src/components/project/project.styles.scss
+++ b/src/components/project/project.styles.scss
@@ -14,17 +14,21 @@
     font-size: 1.3rem;
     margin: 4% 25px 0 25px;
   }
-  .project-image {
-    max-width: 350px;
-    width: 95%;
+  .link-container {
+    .project-image {
+      max-width: 375px;
+      width: 100%;
+    }
   }
+
   .links {
     padding: 0;
     list-style-type: none;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-bottom: 5px;
     width: 150px;
+
     .github-icon {
       width: 40px;
       height: 40px;
@@ -39,7 +43,49 @@
     }
   }
 }
-
+@media (orientation: landscape) and (max-width: 900px) {
+  .project {
+    background-color: #2f3133;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    .title {
+      font-size: 1.5rem;
+      padding: 2%;
+    }
+    p {
+      font-size: 1.3rem;
+      margin: 4% 25px 0 25px;
+    }
+    .project-image {
+      max-width: 375px;
+      width: 95%;
+    }
+    .links {
+      padding: 0;
+      list-style-type: none;
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 5px;
+      width: 150px;
+      .github-icon {
+        width: 40px;
+        height: 40px;
+      }
+      a {
+        color: white;
+        font-size: 1.5rem;
+        text-decoration: none;
+        &:hover {
+          color: #76b041;
+        }
+      }
+    }
+  }
+}
 @media (max-width: 480px) {
   .project {
     background-color: #2f3133;
@@ -59,7 +105,6 @@
       margin: 4% 25px 0 25px;
     }
     .project-image {
-      display: none;
       width: 300px;
     }
     .links {
