--- a/src/components/projects/projects.styles.scss
+++ b/src/components/projects/projects.styles.scss
@@ -39,7 +39,29 @@
       display: grid;
       grid-gap: 15%;
       grid-template-columns: 1fr 1fr;
-      font-size: 2rem;
+    }
+  }
+}
+@media (orientation: landscape) and (max-width: 900px) {
+  .projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding-bottom: 1%;
+    min-height: 50vh;
+    height: 100%;
+    padding-top: 30px;
+    background-color: #1e2529;
+    h1 {
+      font-size: 3rem;
+    }
+
+    .project-list {
+      width: 92%;
+      display: grid;
+      grid-gap: 8%;
+      grid-template-columns: 1fr 1fr;
     }
   }
 }
