--- a/src/components/intro/intro.styles.scss
+++ b/src/components/intro/intro.styles.scss
@@ -42,6 +42,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 60px;
+    line-height: 1.3;
     .intro-text {
       width: 80%;
       display: flex;
@@ -55,7 +57,7 @@
     }
     .intro-subheading {
       font-size: 3.5rem;
-      margin: 1% 0 3% 0;
+      margin: 1% 0 1% 0;
     }
     .intro-visual {
       display: flex;
@@ -112,6 +114,93 @@
     }
   }
 }
+@media (orientation: portrait) and (max-width: 900px) {
+  .intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+    line-height: 1.3;
+    .intro-text {
+      width: 80%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .intro-heading {
+      font-size: 3.5rem;
+      margin: 0;
+      @media (orientation: portrait) and (max-width: 600px) {
+        font-size: 3rem;
+      }
+    }
+    .intro-subheading {
+      font-size: 2.5rem;
+      margin: 1% 0 1% 0;
+      @media (orientation: portrait) and (max-width: 600px) {
+        font-size: 2rem;
+      }
+    }
+    .intro-visual {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img {
+        width: 500px;
+        margin-left: 5%;
+        @media (orientation: portrait) and (max-width: 600px) {
+          width: 400px;
+        }
+      }
+    }
+  }
+}
+// @media (max-width: 700px) {
+//   .intro {
+//     display: flex;
+//     flex-direction: row;
+//     height: calc(100vh - 60px);
+//     background-color: #171d20;
+//     margin-top: 60px;
+//     justify-content: space-around;
+
+//     .intro-text {
+//       padding-left: 40px;
+//       width: 55%;
+//       display: flex;
+//       flex-direction: column;
+//       align-items: flex-start;
+//       justify-content: center;
+//     }
+//     .intro-heading {
+//       font-size: 3rem;
+//       margin: 0 0 3% 0%;
+//     }
+//     .intro-subheading {
+//       font-size: 2.5rem;
+//       margin: 0 0 0 0%;
+//     }
+
+//     .intro-visual {
+//       width: 40%;
+//       display: flex;
+//       align-items: center;
+//       justify-content: flex-start;
+//       margin-bottom: 20px;
+
+//       img {
+//         padding-right: 60px;
+//         width: 250px;
+//       }
+//     }
+//     .hilight {
+//       color: #76b041;
+//       opacity: 1;
+//     }
+//   }
+// }
 @media (max-width: 480px) {
   .intro {
     display: flex;
