--- a/src/components/modal/modal.styles.scss
+++ b/src/components/modal/modal.styles.scss
@@ -14,6 +14,8 @@
     width: 75vw;
     height: 80vh;
     overflow: scroll;
+    border-radius: 10px;
+    font-size: 1.4rem;
   }
   .close-button {
     position: fixed;
@@ -21,9 +23,12 @@
     color: white;
     font-weight: 700;
     border: none;
-    margin: 0.5rem;
+    font-size: 1.5rem;
+    align-self: flex-end;
+    margin: 0.05rem;
     &:hover {
       cursor: pointer;
+      color: #76b041;
     }
   }
 
