--- a/src/components/project/project.styles.scss
+++ b/src/components/project/project.styles.scss
@@ -1,5 +1,6 @@
+@import "../../colors.scss";
 .project {
-  background-color: #2f3133;
+  background-color: $background1;
   border-radius: 25px;
   display: flex;
   flex-direction: column;
@@ -8,29 +9,51 @@
   width: 100%;
   //modal
   .children {
-    padding: 0.25rem 1.5rem;
+    padding: 0.25rem 1.5rem 1.5rem 1.5rem;
     height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
     .name {
-      color: #76b041;
+      color: $accent1;
       margin: 0;
     }
+    .description {
+      padding-bottom: 1rem;
+      opacity: 0.8;
+    }
+    .technologies {
+      color: $accent2;
+      font-size: 1.2rem;
+      margin-top: 0.25rem;
+    }
   }
+
   .technologies {
-    color: #76b041;
+    color: $accent2;
   }
   .title {
     font-size: 1.5rem;
     padding: 2%;
+    margin: 0;
+    color: $accent1;
+    text-shadow: 2px 2px 1px black;
   }
   p {
     font-size: 1.3rem;
     margin: 4% 25px 0 25px;
+    opacity: 0.8;
   }
-
+  .image-button {
+    background-color: rgba(0, 0, 0, 0);
+    padding: 0;
+    margin: 0;
+    border: none;
+    &:hover {
+      cursor: pointer;
+    }
+  }
   .project-image {
     width: 100%;
   }
@@ -42,14 +65,48 @@
     flex-grow: 2;
     gap: 0.5rem;
   }
-
+  .more-info-button {
+    //button that opens project modal
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    border: 2px solid white;
+    font-size: 1rem;
+    border-radius: 10px;
+    width: 50px;
+    height: 40px;
+    &:hover {
+      cursor: pointer;
+      border-color: $accent3;
+      color: $accent3;
+    }
+  }
+  .live-link {
+    //live website button
+    border: white 2px solid;
+    padding: 0.15rem;
+    border-radius: 10px;
+    width: 45px;
+    height: 40px;
+    text-align: center;
+    &:hover {
+      border-color: $accent3;
+      color: $accent3;
+    }
+  }
   .links {
+    // link container (live-link, github-icon, more-info-button)
     padding: 0;
     list-style-type: none;
     display: flex;
-    justify-content: space-between;
-    margin: 0.3rem 0;
-    width: 150px;
+    justify-content: center;
+    margin: 0.3rem 0 1rem 0;
+    gap: 1rem;
+    align-items: center;
+    li {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+    }
 
     .github-icon {
       width: 40px;
@@ -58,63 +115,65 @@
       border-radius: 5px;
       background-color: white;
       &:hover {
-        border-color: #76b041;
-        background-color: #76b041;
+        border-color: $accent3;
+        background-color: $accent3;
       }
     }
     a {
       color: white;
       font-size: 1.5rem;
       text-decoration: none;
-      &:hover {
-        color: #76b041;
-      }
-    }
-  }
-}
-@media (orientation: landscape) and (max-width: 900px) {
-  .project {
-    background-color: #2f3133;
-    border-radius: 25px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    .title {
-      font-size: 1.5rem;
-      padding: 2%;
-    }
-    p {
-      font-size: 1.3rem;
-      margin: 4% 25px 0 25px;
-    }
-    .project-image {
-      //max-width: 375px;
-      width: 100%;
-    }
-    .links {
-      padding: 0;
-      list-style-type: none;
       display: flex;
-      justify-content: space-around;
-      margin-bottom: 5px;
-      width: 150px;
-      .github-icon {
-        width: 40px;
-        height: 40px;
-      }
-      a {
-        color: white;
-        font-size: 1.5rem;
-        text-decoration: none;
-        &:hover {
-          color: #76b041;
-        }
+      align-items: center;
+      &:hover {
+        color: $accent3;
       }
     }
   }
 }
+// @media (orientation: landscape) and (max-width: 900px) {
+//   .project {
+//     background-color: #2f3133;
+//     border-radius: 25px;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     height: 100%;
+//     width: 100%;
+//     .title {
+//       font-size: 1.5rem;
+//       padding: 2%;
+//     }
+//     p {
+//       font-size: 1.3rem;
+//       margin: 4% 25px 0 25px;
+//     }
+//     .project-image {
+//       //max-width: 375px;
+//       width: 100%;
+//     }
+//     .links {
+//       padding: 0;
+//       list-style-type: none;
+//       display: flex;
+//       justify-content: space-around;
+
+//       width: 150px;
+//       .github-icon {
+//         width: 40px;
+//         height: 40px;
+//       }
+//       a {
+//         color: white;
+//         font-size: 1.5rem;
+//         text-decoration: none;
+//         &:hover {
+//           color: #76b041;
+//         }
+//       }
+//     }
+//   }
+// }
 @media (max-width: 480px) {
   .project {
     background-color: #2f3133;
@@ -141,7 +200,7 @@
       list-style-type: none;
       display: flex;
       justify-content: space-around;
-      margin-bottom: 5px;
+
       width: 150px;
       .github-icon {
         width: 40px;
