--- a/src/components/about/about.styles.scss
+++ b/src/components/about/about.styles.scss
@@ -1,10 +1,11 @@
+@import "../../colors.scss";
 .about {
   display: flex;
   flex-direction: column;
   align-items: center;
   min-height: calc(100vh - 60px);
   height: 100%;
-  background-color: #171d20;
+  background-color: $background1;
   margin-top: 5%;
   h1 {
     padding-top: 60px;
