--- a/src/components/intro/intro.styles.scss
+++ b/src/components/intro/intro.styles.scss
@@ -1,8 +1,9 @@
+@import "../../colors.scss";
 .intro {
   display: flex;
 
   height: calc(100vh - 60px);
-  background-color: #171d20;
+  background-color: $background1;
   margin-top: 60px;
   .intro-text {
     width: 50%;
@@ -10,6 +11,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-shadow: 2px 2px 1px black;
   }
   .intro-heading {
     font-size: 3rem;
@@ -30,8 +32,12 @@
       width: 500px;
     }
   }
-  .hilight {
-    color: #76b041;
+  .hilight1 {
+    color: $accent1;
+    opacity: 1;
+  }
+  .hilight2 {
+    color: $accent1;
     opacity: 1;
   }
 }
@@ -230,8 +236,9 @@
       }
     }
     .hilight {
-      color: #76b041;
+      color: $accent1;
       opacity: 1;
+      text-shadow: 2px 2px 1px black;
     }
   }
 }
