--- a/src/components/modal/modal.styles.scss
+++ b/src/components/modal/modal.styles.scss
@@ -1,3 +1,4 @@
+@import "../../colors.scss";
 .modal {
   position: fixed;
 
@@ -10,12 +11,14 @@
     z-index: 37;
     top: 10vh;
     left: 12.5vw;
-    background-color: black;
+    background-color: $background3;
     width: 75vw;
     height: 80vh;
     overflow: scroll;
     border-radius: 10px;
     font-size: 1.4rem;
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+    padding-bottom: 1rem;
   }
   .close-button {
     position: fixed;
@@ -26,21 +29,25 @@
     font-size: 1.5rem;
     align-self: flex-end;
     margin: 0.05rem;
+    border-radius: 3px;
     &:hover {
       cursor: pointer;
-      color: #76b041;
+      background-color: red;
     }
   }
 
   .background {
-    background-color: rgba(0, 0, 0, 0.5);
-    position: absolute;
+    background-color: rgba(63, 63, 63, 0.8);
+    // position: absolute;
     width: 200vw;
-    height: 100vh;
+    height: 200vh;
     z-index: 2;
-    top: 0;
+    position: fixed;
+    // top: 0;
+
+    top: 10vh;
+    left: 12.5vw;
     margin-left: -50vw;
     margin-top: -50vh;
-    left: 0;
   }
 }
