--- a/src/components/skill/skill.styles.scss
+++ b/src/components/skill/skill.styles.scss
@@ -1,3 +1,4 @@
+@import "../../colors.scss";
 .skill {
   display: flex;
   flex-direction: column;
@@ -12,7 +13,9 @@
   }
   .name {
     font-size: 2em;
-    opacity: 0.8;
+    //opacity: 0.8;
+    color: $accent2;
+    text-shadow: 2px 2px 1px black;
   }
 }
 
