--- a/src/components/skills/skills.styles.scss
+++ b/src/components/skills/skills.styles.scss
@@ -1,9 +1,10 @@
+@import "../../colors.scss";
 .skills {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  background-color: #1e2529;
+  background-color: $background3;
   min-height: 50vh;
   height: 100%;
   padding: 35px 0;
@@ -25,7 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #1e2529;
+    background-color: $background3;
     min-height: 44vh;
 
     h1 {
@@ -43,7 +44,7 @@
   .skills {
     display: flex;
     flex-direction: column;
-    background-color: #1e2529;
+    background-color: $background3;
     height: 100%;
 
     h1 {
