--- a/src/components/modal/modal.styles.scss
+++ b/src/components/modal/modal.styles.scss
@@ -50,4 +50,128 @@
     margin-left: -50vw;
     margin-top: -50vh;
   }
+
+  .children {
+    padding: 0.25rem 1.5rem 1.5rem 1.5rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    color: white;
+    .name {
+      color: $accent1;
+      margin: 0;
+    }
+    .description {
+      padding-bottom: 1rem;
+      opacity: 0.8;
+    }
+    .technologies {
+      color: $accent2;
+      font-size: 1.2rem;
+      margin-top: 0.25rem;
+    }
+  }
+
+  .technologies {
+    color: $accent2;
+  }
+  .title {
+    font-size: 1.5rem;
+    padding: 2%;
+    margin: 0;
+    color: $accent1;
+    text-shadow: 2px 2px 1px black;
+  }
+  p {
+    font-size: 1.3rem;
+    margin: 4% 25px 0 25px;
+    opacity: 0.8;
+  }
+  .image-button {
+    background-color: rgba(0, 0, 0, 0);
+    padding: 0;
+    margin: 0;
+    border: none;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  .project-image {
+    width: 100%;
+  }
+  .group1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    flex-grow: 2;
+    gap: 0.5rem;
+  }
+  .more-info-button {
+    //button that opens project modal
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    border: 2px solid white;
+    font-size: 1rem;
+    border-radius: 10px;
+    width: 50px;
+    height: 40px;
+    &:hover {
+      cursor: pointer;
+      border-color: $accent3;
+      color: $accent3;
+    }
+  }
+  .live-link {
+    //live website button
+    border: white 2px solid;
+    padding: 0.15rem;
+    border-radius: 10px;
+    width: 45px;
+    height: 40px;
+    text-align: center;
+    &:hover {
+      border-color: $accent3;
+      color: $accent3;
+    }
+  }
+  .links {
+    // link container (live-link, github-icon, more-info-button)
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    margin: 0.3rem 0 1rem 0;
+    gap: 1rem;
+    align-items: center;
+    li {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .github-icon {
+      width: 40px;
+      height: 40px;
+      border: white solid 1px;
+      border-radius: 5px;
+      background-color: white;
+      &:hover {
+        border-color: $accent3;
+        background-color: $accent3;
+      }
+    }
+    a {
+      color: white;
+      font-size: 1.5rem;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      &:hover {
+        color: $accent3;
+      }
+    }
+  }
 }
