--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -8,14 +8,22 @@
   width: 100vw;
   height: 60px;
   z-index: 1;
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 60px;
+    padding: 0 1rem;
+  }
 
   .list-container {
     display: flex;
     list-style: none;
     justify-content: space-around;
-    margin: 0 30% 0 30%;
+    align-items: center;
 
     padding: 0.5%;
+    gap: 2rem;
     li {
       padding: 0.5%;
       font-size: 1.4em;
@@ -30,6 +38,30 @@
       }
     }
   }
+
+  .contact-container {
+    //list of linkedin and github icon
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    margin-right: 1rem;
+    gap: 1rem;
+    @media (max-width: 1024px) {
+      background-color: $background1;
+      justify-content: center;
+      margin: 0;
+    }
+
+    .icon {
+      border-radius: 5px;
+      background-color: white;
+      width: 30px;
+      &:hover {
+        background-color: $accent3;
+      }
+    }
+  }
+
   .burger {
     display: none;
   }
@@ -45,6 +77,13 @@
     position: fixed;
     width: 100vw;
     height: 60px;
+    nav {
+      display: block;
+      align-items: center;
+      justify-content: space-between;
+      height: 60px;
+      padding: 0 1rem;
+    }
 
     .burger-line {
       width: 35px;
@@ -62,6 +101,7 @@
       width: 100vw;
       margin: 0;
       padding: 0;
+      gap: 0;
       li {
         display: flex;
         justify-content: center;
@@ -89,6 +129,7 @@
         }
       }
     }
+
     .burger {
       width: 35px;
       display: flex;
@@ -96,6 +137,7 @@
       margin: 13px 15px;
     }
     .dflex {
+      // active in mobile view
       display: flex;
       flex-direction: column;
     }
