--- a/src/components/modal/modal.styles.scss
+++ b/src/components/modal/modal.styles.scss
@@ -1,4 +1,6 @@
-@import "../../colors.scss";
+@use "../../scss/mixins" as *;
+@use "../../scss/variables" as *;
+@use "../../scss/animations" as *;
 .modal {
   position: fixed;
 
@@ -18,17 +20,19 @@
     border-radius: 10px;
     font-size: 1.4rem;
     overflow-x: hidden; /* Hide horizontal scrollbar */
-    padding-bottom: 1rem;
+    padding-bottom: 2rem;
+    animation-name: scale-from-0;
+    animation-duration: 0.2s;
   }
   .close-button {
     position: fixed;
     background-color: rgba(0, 0, 0, 0);
     color: white;
-    font-weight: 700;
+    font-weight: 500;
     border: none;
-    font-size: 1.5rem;
+    font-size: 2rem;
     align-self: flex-end;
-    margin: 0.05rem;
+    margin: 0.2rem;
     border-radius: 3px;
     &:hover {
       cursor: pointer;
@@ -49,10 +53,12 @@
     left: 12.5vw;
     margin-left: -50vw;
     margin-top: -50vh;
+    animation-name: scale-from-0;
+    animation-duration: 0.2s;
   }
 
   .children {
-    padding: 0.25rem 1.5rem 1.5rem 1.5rem;
+    padding: 2rem 2.5rem 2.5rem 2rem;
     height: 100%;
     display: flex;
     align-items: center;
@@ -62,33 +68,33 @@
     .name {
       color: $accent1;
       margin: 0;
+      font-size: 2.5rem;
+      padding-bottom: 1rem;
+      margin: 0;
+      color: $accent1;
+      text-shadow: 2px 2px 1px black;
+      @include responsive(phone) {
+        font-size: 2rem;
+      }
     }
     .description {
-      padding-bottom: 1rem;
+      font-size: 2rem;
+      margin: 0 25px 0 25px;
       opacity: 0.8;
+      @include responsive(phone) {
+        font-size: 1.6rem;
+      }
     }
     .technologies {
       color: $accent2;
-      font-size: 1.2rem;
-      margin-top: 0.25rem;
+      font-size: 1.8rem;
+      margin: 1rem 25px 0 25px;
+      @include responsive(phone) {
+        font-size: 1.4rem;
+      }
     }
   }
 
-  .technologies {
-    color: $accent2;
-  }
-  .title {
-    font-size: 1.5rem;
-    padding: 2%;
-    margin: 0;
-    color: $accent1;
-    text-shadow: 2px 2px 1px black;
-  }
-  p {
-    font-size: 1.3rem;
-    margin: 4% 25px 0 25px;
-    opacity: 0.8;
-  }
   .image-button {
     background-color: rgba(0, 0, 0, 0);
     padding: 0;
@@ -126,12 +132,14 @@
   }
   .live-link {
     //live website button
+    font-size: 1.4rem;
     border: white 2px solid;
     padding: 0.15rem;
     border-radius: 10px;
     width: 45px;
     height: 40px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     &:hover {
       border-color: $accent3;
       color: $accent3;
