--- a/src/components/project/project.styles.scss
+++ b/src/components/project/project.styles.scss
@@ -1,4 +1,5 @@
-@import "../../colors.scss";
+@use "../../scss/mixins" as *;
+@use "../../scss/variables" as *;
 .project {
   background-color: $background1;
   border-radius: 25px;
@@ -7,24 +8,35 @@
   align-items: center;
   height: 100%;
   width: 100%;
+  @include responsive(phone) {
+    width: 95%;
+    margin: 3%;
+  }
 
   .technologies {
+    font-size: 1.8rem;
     color: $accent2;
+    padding: 0 2.5rem;
+    @include responsive(phone) {
+      font-size: 1.5rem;
+    }
   }
   .title {
-    font-size: 1.5rem;
     padding: 2%;
     margin: 0;
     color: $accent1;
     text-shadow: 2px 2px 1px black;
   }
-  p {
-    font-size: 1.3rem;
+  .project-description {
+    font-size: 2rem;
     margin: 4% 25px 0 25px;
     opacity: 0.8;
+    @include responsive(phone) {
+      font-size: 1.6rem;
+    }
   }
   .image-button {
-    background-color: rgba(0, 0, 0, 0);
+    background-color: transparent;
     padding: 0;
     margin: 0;
     border: none;
@@ -45,10 +57,10 @@
   }
   .more-info-button {
     //button that opens project modal
-    background-color: rgba(0, 0, 0, 0);
+    background-color: transparent;
     color: white;
     border: 2px solid white;
-    font-size: 1rem;
+    font-size: 1.4rem;
     border-radius: 10px;
     width: 50px;
     height: 40px;
@@ -60,12 +72,16 @@
   }
   .live-link {
     //live website button
+    font-size: 1.4rem;
+    display: flex;
     border: white 2px solid;
     padding: 0.15rem;
     border-radius: 10px;
     width: 45px;
     height: 40px;
-    text-align: center;
+
+    justify-content: center;
+
     &:hover {
       border-color: $accent3;
       color: $accent3;
@@ -80,6 +96,11 @@
     margin: 0.3rem 0 1rem 0;
     gap: 1rem;
     align-items: center;
+    @include responsive(phone) {
+      justify-content: space-around;
+
+      width: 150px;
+    }
     li {
       display: flex;
       align-items: center;
@@ -152,46 +173,46 @@
 //     }
 //   }
 // }
-@media (max-width: 480px) {
-  .project {
-    background-color: #2f3133;
-    border-radius: 25px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-    width: 95%;
-    margin: 3%;
-    .title {
-      font-size: 1.3rem;
-      padding: 2%;
-    }
-    p {
-      font-size: 1.1rem;
-      margin: 4% 25px 0 25px;
-    }
-    .project-image {
-      width: 100%;
-    }
-    .links {
-      padding: 0;
-      list-style-type: none;
-      display: flex;
-      justify-content: space-around;
+// @media (max-width: 480px) {
+//   .project {
+//     background-color: #2f3133;
+//     border-radius: 25px;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     height: 100%;
+//     width: 95%;
+//     margin: 3%;
+//     .title {
+//       font-size: 1.3rem;
+//       padding: 2%;
+//     }
+//     p {
+//       font-size: 1.1rem;
+//       margin: 4% 25px 0 25px;
+//     }
+//     .project-image {
+//       width: 100%;
+//     }
+//     .links {
+//       padding: 0;
+//       list-style-type: none;
+//       display: flex;
+//       justify-content: space-around;
 
-      width: 150px;
-      .github-icon {
-        width: 40px;
-        height: 40px;
-      }
-      a {
-        color: white;
-        font-size: 1.5rem;
-        text-decoration: none;
-        &:hover {
-          color: #76b041;
-        }
-      }
-    }
-  }
-}
+//       width: 150px;
+//       .github-icon {
+//         width: 40px;
+//         height: 40px;
+//       }
+//       a {
+//         color: white;
+//         font-size: 1.5rem;
+//         text-decoration: none;
+//         &:hover {
+//           color: #76b041;
+//         }
+//       }
+//     }
+//   }
+// }
