--- a/src/components/projects/projects.styles.scss
+++ b/src/components/projects/projects.styles.scss
@@ -1,4 +1,5 @@
-@import "../../colors.scss";
+@use "../../scss/mixins" as *;
+@use "../../scss/variables" as *;
 .projects {
   display: flex;
   flex-direction: column;
@@ -6,20 +7,28 @@
   justify-content: space-around;
   padding-bottom: 1%;
   min-height: 50vh;
-  height: 100%;
+  //height: 100%;
   padding-top: 30px;
   background-color: $background3;
-  h1 {
-    font-size: 3rem;
-  }
 
   .project-list {
+    margin-top: 1.5rem;
     width: 50%;
     display: grid;
-    grid-gap: 1rem;
+    grid-gap: 2.5rem;
     grid-template-columns: 1fr;
-    @media (max-width: 1100px) {
-      grid-template-columns: 1fr;
+
+    @include responsive(tab-land) {
+      width: 75%;
+    }
+    @include responsive(tab-port) {
+      width: 92%;
+
+      grid-gap: 2.5rem;
+    }
+    @include responsive(phone) {
+      margin-left: 0%;
+      display: block;
     }
   }
   .link-container {
@@ -34,67 +43,45 @@
   }
 }
 
-@media (max-width: 1100px) {
-  .projects {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+// @media (orientation: landscape) and (max-width: 900px) {
+//   .projects {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     justify-content: space-around;
+//     padding-bottom: 1%;
+//     min-height: 50vh;
+//     height: 100%;
+//     padding-top: 30px;
+//     background-color: #1e2529;
+//     h1 {
+//       font-size: 3rem;
+//     }
 
-    padding-bottom: 1%;
-    height: 100%;
+//     .project-list {
+//       width: 92%;
+//       display: grid;
+//       grid-gap: 8%;
+//       grid-template-columns: 1fr;
+//     }
+//   }
+// }
+// @media (max-width: 480px) {
+//   .projects {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
 
-    background-color: #1e2529;
-    h1 {
-      font-size: 3rem;
-    }
+//     padding-bottom: 5%;
+//     height: 100%;
+//     background-color: #1e2529;
+//     h1 {
+//       font-size: 2rem;
+//     }
 
-    .project-list {
-      width: 75%;
-      display: grid;
-      grid-gap: 1rem;
-      grid-template-columns: 1fr;
-    }
-  }
-}
-@media (orientation: landscape) and (max-width: 900px) {
-  .projects {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    padding-bottom: 1%;
-    min-height: 50vh;
-    height: 100%;
-    padding-top: 30px;
-    background-color: #1e2529;
-    h1 {
-      font-size: 3rem;
-    }
-
-    .project-list {
-      width: 92%;
-      display: grid;
-      grid-gap: 8%;
-      grid-template-columns: 1fr;
-    }
-  }
-}
-@media (max-width: 480px) {
-  .projects {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    padding-bottom: 5%;
-    height: 100%;
-    background-color: #1e2529;
-    h1 {
-      font-size: 2rem;
-    }
-
-    .project-list {
-      margin-left: 0%;
-      display: block;
-    }
-  }
-}
+//     .project-list {
+//       margin-left: 0%;
+//       display: block;
+//     }
+//   }
+// }
