--- a/src/components/skill/skill.styles.scss
+++ b/src/components/skill/skill.styles.scss
@@ -1,4 +1,6 @@
-@import "../../colors.scss";
+@use "../../scss/variables" as *;
+@use "../../scss/mixins" as *;
+@use "../../scss/animations" as *;
 .skill {
   display: flex;
   flex-direction: column;
@@ -6,33 +8,27 @@
   align-items: center;
   max-width: 100px;
   margin: 5%;
+  &:hover .skill-logo {
+    animation-name: jiggle;
+    animation-duration: 0.9s;
+    animation-timing-function: ease-out;
+  }
 
   .skill-logo {
     max-width: 100%;
     max-height: 100px;
-  }
-  .name {
-    font-size: 2em;
-    //opacity: 0.8;
-    color: $accent2;
-    text-shadow: 2px 2px 1px black;
-  }
-}
 
-@media (max-width: 480px) {
-  .skill {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: 100px;
-    margin: 5%;
-
-    .skill-logo {
+    @include responsive(phone) {
       max-width: 30px;
       max-height: 30px;
     }
-    .name {
+  }
+  .name {
+    font-size: 3rem;
+    //opacity: 0.8;
+    color: $accent2;
+    text-shadow: 2px 2px 1px black;
+    @include responsive(phone) {
       font-size: 1.4em;
       opacity: 0.8;
     }
