--- a/src/components/skills/skills.styles.scss
+++ b/src/components/skills/skills.styles.scss
@@ -1,4 +1,5 @@
-@import "../../colors.scss";
+@use "../../scss/mixins" as *;
+@use "../../scss/variables" as *;
 .skills {
   display: flex;
   flex-direction: column;
@@ -8,51 +9,24 @@
   min-height: 50vh;
   height: 100%;
   padding: 35px 0;
-
-  h1 {
-    font-size: 3rem;
+  @include responsive(tab-land) {
+    min-height: 44vh;
   }
+
   .skills-container {
+    margin-top: 1rem;
     width: 50%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-column-gap: 10%;
     grid-row-gap: 0;
-  }
-}
-
-@media (max-width: 1100px) {
-  .skills {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: $background3;
-    min-height: 44vh;
-
-    h1 {
-      font-size: 3rem;
-    }
-    .skills-container {
+    @include responsive(tab-land) {
       width: 75%;
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
       grid-column-gap: 10%;
     }
-  }
-}
-@media (max-width: 480px) {
-  .skills {
-    display: flex;
-    flex-direction: column;
-    background-color: $background3;
-    height: 100%;
-
-    h1 {
-      font-size: 2rem;
-    }
-    .skills-container {
-      display: grid;
-      width: 90%;
+    @include responsive(phone) {
+      width: 75%;
       grid-template-columns: 1fr 1fr 1fr;
       grid-column-gap: 10%;
     }
