--- a/src/pages/home-page/home-page.styles.scss
+++ b/src/pages/home-page/home-page.styles.scss
@@ -1,4 +1,5 @@
-@import "../../colors.scss";
+@use "../../scss/mixins" as *;
+@use "../../scss/variables" as *;
 .home-page {
   background-color: $background3;
   color: white;
@@ -11,18 +12,8 @@
     margin: 0 auto;
 
     width: 60%;
-  }
-}
-
-@media (max-width: 480px) {
-  .home-page {
-    background-color: $background3;
-    color: white;
-  }
-  hr {
-    border-top: 1px solid $accent1;
-    border-bottom: 1px solid $background3;
-
-    width: 90%;
+    @include responsive(phone) {
+      width: 90%;
+    }
   }
 }
