--- a/src/components/projects/projects.styles.scss
+++ b/src/components/projects/projects.styles.scss
@@ -13,17 +13,17 @@
 
   .project-list {
     margin-top: 1.5rem;
-    width: 50%;
+    width: 75%;
     display: grid;
     grid-gap: 2.5rem;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
 
     @include responsive(tab-land) {
       width: 75%;
     }
     @include responsive(tab-port) {
       width: 92%;
-
+      grid-template-columns: 1fr;
       grid-gap: 2.5rem;
     }
     @include responsive(phone) {
